--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stack Exchange Tags React Demo</title>
+    <link rel="icon" type="image/png" href="public/favicon.png" />
+    <title>StackOverflow Tags Viewer</title>
   </head>
   <body>
     <div id="root"></div>
